--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "gsap": "^3.13.0",
     "lucide-react": "^0.514.0",
     "next": "15.3.3",
+    "next-intl": "^4.3.3",
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwindcss": "^3.4.1",
     "tailwind-merge": "^3.0.2",
+    "tailwindcss": "^3.4.1",
     "three": "^0.177.0"
   },
   "devDependencies": {
