--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "radix-ui": "^1.4.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "recharts": "^3.1.2",
+    "shadcn": "^3.2.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^3.4.1",
     "three": "^0.177.0"
