--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^10.7.4",
+    "@react-three/fiber": "^9.3.0",
     "class-variance-authority": "^0.7.1",
     "framer-motion": "^12.17.3",
     "gsap": "^3.13.0",
